# aspiration

./: .gitignore  .pre-commit-config.yaml  .template.envrc  README.md  mkdocs.yml  noxfile.py  pyproject.toml
casechange/: __init__.py  __main__.py  _casechange.py  cli.py  methods.py
casechange/tests/: test_cli.py
docs/: Dockerfile  casechange.md  contributing.md  doubleset.md  getting_started.md  learnings.md
docs-server/: Dockerfile  oauth2-proxy.cfg
docs/javascript/: mathjax.js
doubleset/: __init__.py  _doubleset.py
doubleset/tests/: test_doubleset.py
