[tool.poetry]
name = "aspiration"
version = "0.1.0"
description = ""
authors = ["Zane Dufour <zane@znd4.me>"]
readme = "README.md"
packages = [{ include = "casechange" }, { include = "doubleset" }]

[tool.poetry.scripts]
casechange = 'casechange.cli:app'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^21.10-beta.0"
pre-commit = "^2.15.0"
ipython = "^7.29.0"
pytest = "^6.2.5"
nox = "^2021.10.1"
PyYAML = "^6.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
hypothesis = "^6.24.2"
pytest-cov = "^3.0.0"
coverage = { version = "^6.1.2", extras = ["toml"] }
pytest-timeout = "^2.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.2.3"
mkdocs-material = "8.0.0b1"
mkdocstrings = "^0.16.2"
mkdocs-click = "^0.4.0"
mike = "^1.1.2"

[tool.poetry.group.numpy.dependencies]
numpy = "^1.21.4"

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["**/__main__.py"]

[build-system]
requires = ["poetry>=1.2.0a2"]
# Once it releases, this should be changed to the below
# requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
